Title is correctly shown on small screens

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -20,6 +20,12 @@ nav .brand-logo img {
     margin-bottom: 8px;
 }
 
+@media only screen and (max-width: 992px) {
+    nav .brand-logo img {
+        margin-left: 0px;
+    }
+}
+
 .sidenav .user-view .name {
     font-weight: 600 !important;
     padding-bottom: 16px;
